<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".FavoriteNeighbourActivity">


  <ImageView
      android:id="@+id/first_img"
      android:layout_width="match_parent"
      android:layout_height="250dp"

      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />




  <ImageView
      android:id="@+id/back_arrow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:src="@drawable/ic_baseline_arrow_back_24"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <android.support.v7.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_marginStart="14dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="14dp"
      app:cardCornerRadius="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/first_img">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/name_neighbourg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="14dp"
          android:text="Caroline"
          android:textSize="25sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:id="@+id/cellphone"
          android:layout_width="25dp"
          android:layout_height="28dp"
          android:layout_marginStart="21dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintEnd_toStartOf="@+id/text_cellphone"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/location"
          app:srcCompat="@drawable/ic_sharp_phone_24" />

      <ImageView
          android:id="@+id/social_img"
          android:layout_width="25dp"
          android:layout_height="28dp"
          android:layout_marginStart="20dp"
          android:layout_marginTop="17dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cellphone"
          app:srcCompat="@drawable/ic_sharp_language_24" />

      <TextView
          android:id="@+id/text_location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="21dp"
          android:layout_marginTop="17dp"
          android:text="TextView"
          app:layout_constraintStart_toEndOf="@+id/location"
          app:layout_constraintTop_toBottomOf="@+id/name_neighbourg" />

      <TextView
          android:id="@+id/text_cellphone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="24dp"
          android:text="TextView"
          app:layout_constraintStart_toEndOf="@+id/cellphone"
          app:layout_constraintTop_toBottomOf="@+id/text_location" />

      <TextView
          android:id="@+id/social_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="27dp"
          android:text="TextView"
          app:layout_constraintStart_toEndOf="@+id/social_img"
          app:layout_constraintTop_toBottomOf="@+id/text_cellphone" />

      <ImageView
          android:id="@+id/location"
          android:layout_width="25dp"
          android:layout_height="28dp"
          android:layout_marginStart="22dp"
          android:layout_marginTop="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/name_neighbourg"
          app:srcCompat="@drawable/ic_baseline_location_on_24" />

    </android.support.constraint.ConstraintLayout>


  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_marginStart="14dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="14dp"
      app:cardCornerRadius="5sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


      <TextView
          android:id="@+id/about_me"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="5dp"

          android:text="About Me"
          android:textSize="25sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/text_about"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          android:text="TextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/about_me" />
    </android.support.constraint.ConstraintLayout>


  </android.support.v7.widget.CardView>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/favorite_float"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:clickable="true"
      app:backgroundTint="@color/lightGrey"
      app:layout_constraintBottom_toTopOf="@+id/cardView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/first_img"
      app:srcCompat="@drawable/ic_star_white_24dp" />


</android.support.constraint.ConstraintLayout>